--- a/GitVSOnlineSample/CordovaWithGit/www/index.html
+++ b/GitVSOnlineSample/CordovaWithGit/www/index.html
@@ -14,12 +14,12 @@
     <link href="css/index.css" rel="stylesheet" />
 </head>
 <body>
-    <p>Hello, your application is ready!</p>
+    <p>Hello, your application is ready!</p><
 
     <!-- Cordova reference, this is added to your app when it's built. -->
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
-
+    <input id="Text1" type="text" />
     <script src="scripts/index.js"></script>
 </body>
 </html>
