--- a/GitVSOnlineSample/CordovaWithGit/www/index.html
+++ b/GitVSOnlineSample/CordovaWithGit/www/index.html
@@ -20,7 +20,7 @@
     <script src="cordova.js"></script>
     <script src="scripts/platformOverrides.js"></script>
     <input id="Text1" type="text" />
-    <a href="#">This is hyperlink</a>
+    <a href="#">This is hyperlink new comment</a>
     <script src="scripts/index.js"></script>
 </body>
 </html>
